testsuite/tests/safeHaskell/safeInfered/UnsafeInfered05.stderr
[1 of 2] Compiling UnsafeInfered05_A (.hs -> .o)
[2 of 2] Compiling UnsafeInfered05  (.hs -> .o)

UnsafeInfered05.hs:4:1: error:
    UnsafeInfered05_A: Can't be safely imported!
    The module itself isn't safe.
