testsuite/tests/safeHaskell/safeInfered/UnsafeInfered05.hs
{-# LANGUAGE Safe #-}
module UnsafeInfered05 where

import safe UnsafeInfered05_A

g :: Int
g = f

